--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   text-align: center;
   background-color: #011F3F;
-  overflow:hidden;
-  width:100%;
+  position: relative;
 }
 
 #level-title {
