--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,11 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+.disable-select {
+    user-select: none;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none; 
+}
